# yomi-core

./: README.md  mirrors_cache.json  pyproject.toml  requirements.txt  test_debug.py
downloads/: history.db
tools/: fetch-names.py  map-builder.py  test-api.py
yomi/: __init__.py  api.py  cli.py  converters.py  core.py  database.py  sites.json
yomi/extractors/: base.py  common.py  manganato.py
yomi/utils/: aggregator.py  raw-names.json
