[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yomi-core"
version = "0.1.1"
description = "The Universal Hybrid-Engine Manga Downloader"
readme = "README.md"
authors = [
    { name = "OmurEKiraz", email = "omrkrz0678@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["manga", "downloader", "scraper", "cli", "async", "comics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "aiohttp",
    "aiofiles",
    "requests",
    "beautifulsoup4",
    "lxml",
    "rich",
    "rich-click",
    "curl_cffi",
    "Pillow",
    "img2pdf",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/OmurEKiraz/yomi-core"
Repository = "https://github.com/OmurEKiraz/yomi-core"
Issues = "https://github.com/OmurEKiraz/yomi-core/issues"

[project.scripts]
yomi = "yomi.cli:cli"
